# telegram

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
.idea-to-code/20260505-2241-tdesktop-source-parity/: 00-idea.md  01-requirements.md  02-prd.md  03-milestones.md  04-verification.md  05-final-report.md  06-acceptance.md  status.json
.idea-to-code/20260507-0257-tdesktop-parity-functions/: 00-idea.md  01-requirements.md  02-prd.md  03-milestones.md  04-verification.md  07-execution-log.md  status.json
.idea-to-code/20260515-0425-desktop-ui-tool-mouse-response-parity/: 00-idea.md  01-requirements.md  02-design.md  03-implementation.md  04-milestones.md  05-verification.md  06-acceptance.md  07-execution-log.md  08-final-report.md  status.json
.idea-to-code/history/: index.jsonl
.idea-to-code/skill-selftest/: 00-idea.md  03-milestones.md  04-verification.md  05-final-report.md  06-acceptance.md  status.json
.idea-to-code/skill-selftest-seq/: 00-idea.md  01-requirements.md  03-milestones.md  04-verification.md  05-final-report.md  06-acceptance.md  status.json
.idea-to-code/telegram-platform/: 00-idea.md  01-requirements.md  02-prd.md  03-milestones.md  03-milestones.md.bak  04-verification.md  05-final-report.md  06-acceptance.md  07-execution-log.md  08-atlas-task-library.md  status.json
client/src/: CMakeLists.txt  main.cpp
client/src/app/: app_shell.cpp  app_shell.h  application.cpp  application.h  client_session.h  client_state.h
client/src/app_chat/: main.cpp
client/src/app_desktop/: bubble_list_view.cpp  bubble_list_view.h  design_tokens.h  desktop_chat_store.cpp  desktop_chat_store.h  main.cpp  store_test.cpp  typing_indicator.cpp  typing_indicator.h
client/src/app_mobile/: main.cpp  mobile_chat_bridge.cpp  mobile_chat_bridge.h
client/src/app_mobile/qml/: AttachmentsPage.qml  CallPage.qml  ChatListPage.qml  ChatPage.qml  ContactsPage.qml  DevicesPage.qml  LoginPage.qml  Main.qml  ProfilePage.qml  RemoteControlPage.qml  SearchPage.qml  SettingsPage.qml  Theme.qml
client/src/auth/: auth_controller.cpp  auth_controller.h
client/src/chat/: chat_controller.cpp  chat_controller.h
client/src/contacts/: contact_controller.cpp  contact_controller.h
client/src/devices/: device_controller.cpp  device_controller.h
client/src/net/: platform.h  socket_error.cpp  socket_error.h  socket_raii.h  socket_subsystem.cpp  socket_subsystem.h  tcp_line_client.cpp  tcp_line_client.h
client/src/remote_control/: remote_session_controller.cpp  remote_session_controller.h  remote_session_smoke.cpp
client/src/transport/: control_plane_client.cpp  control_plane_client.h  json_parser_test.cpp  json_value.cpp  json_value.h  request_messages.cpp  request_messages.h  response_messages.cpp  response_messages.h  session_gateway_client.cpp  session_gateway_client.h  udp_frame_stream.cpp  udp_frame_stream.h  udp_media_probe.cpp  udp_media_probe.h
deploy/android/: AndroidManifest.xml  README.md
deploy/docker/: README.md  docker-compose.yml  production.env.example  prometheus.yml  server.Dockerfile
deploy/ios/: Info.plist.in  README.md
deploy/linux/: README.md  telegram-like.desktop
deploy/macos/: Info.plist.in  README.md
deploy/tls/: README.md  nginx-postgres.conf  nginx-web.conf  nginx.conf
deploy/windows/: telegram_like_desktop.iss.template
docs/architecture/: client.md  current-state.md  document-maintenance.md  implementation-roadmap.md  overall.md  remote-control.md  server.md  telegram-compatibility.md
docs/diagrams/: attachment-sequence.mmd  chat-flow.mmd  client-module-map.mmd  client-navigation-flow.mmd  development-roadmap.mmd  device-management-flow.mmd  login-flow.mmd  message-delivery-sequence.mmd  remote-control-architecture.mmd  remote-control-user-flow.mmd  remote-session-sequence.mmd  server-service-map.mmd  system-landscape.mmd
docs/flows/: sequence-flows.md  user-flows.md
scripts/: _sweep_validators.py  build_android_apk.ps1  chat_cli.py  deploy_wsl_docker.ps1  generate_tls_dev_cert.py  package_windows_desktop.ps1  validate_account_lifecycle.py  validate_android_prep.py  validate_apple_build_path.py  validate_attachments.py  validate_auth_cache.py  validate_avatars.py  validate_block_mute.py  validate_bubble_list_view.py  validate_bubble_polish.py  validate_call_session.py  validate_chunked_upload.py  validate_ci_workflow.py  validate_composer_scheduled_silent.py  validate_concurrency_fixes.py  validate_contacts.py  validate_cpp_chat_e2e.py  validate_cpp_remote_session.py  validate_cpp_tls_client.py  validate_cross_client_account_parity.py  validate_desktop_account_domain_wiring.py  validate_desktop_button_responses.py  validate_desktop_chat_reference_states.py  validate_desktop_composer_interactions.py  validate_desktop_gui_smoke.py  validate_desktop_image_diff.py  validate_desktop_info_reference_ui.py  validate_desktop_login_reference_ui.py  validate_desktop_message_interactions.py  validate_desktop_modal_reference_states.py  validate_desktop_no_network_reference_ui.py  validate_desktop_popup_states.py  validate_desktop_reference_map.py  validate_desktop_right_panel.py  validate_desktop_service_interactions.py  (+81 more)
server/: README.md  main.py  pyproject.toml
server/server/: __init__.py  app.py  connection_registry.py  control_plane.py  crypto.py  media_codec.py  media_crypto.py  media_io.py  media_plane.py  protocol.py  redis_cache.py  relay_peer.py  reliable_stream.py  repositories.py  screen_source.py  state.py  web_bridge.py
server/server/services/: account_lifecycle.py  attachment_store.py  auth.py  block_mute.py  call_session.py  chat.py  contacts.py  conversation_flags.py  drafts.py  input.py  observability.py  phone_otp.py  polls.py  presence.py  push_dispatch.py  push_tokens.py  rate_limiter.py  remote_session.py  two_fa.py
server/web/: app.js  index.html  manifest.webmanifest  sw.js
shared/: README.md
shared/include/shared/protocol/: chat_models.h  control_envelope.h  errors.h  message_types.h  remote_session.h
